build/errors/error14.txt
adam@dig:~/openhip-openhip-7ca0bd5421a5$ make
make  all-recursive
make[1]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Making all in src
make[2]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
make[3]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_esp.o -MD -MP -MF .deps/hip-hip_esp.Tpo -c -o hip-hip_esp.o `test -f 'usermode/hip_esp.c' || echo './'`usermode/hip_esp.c
usermode/hip_esp.c: In function ‘hip_esp_encrypt’:
usermode/hip_esp.c:2076:28: error: incompatible type for argument 4 of ‘DES_ede3_cbc_encrypt’
                            entry->ks[0], entry->ks[1], entry->ks[2],
                            ^~~~~
In file included from usermode/hip_esp.c:63:0:
/usr/include/openssl/des.h:119:6: note: expected ‘DES_key_schedule * {aka struct DES_ks *}’ but argument is of type ‘DES_key_schedule {aka struct DES_ks}’
 void DES_ede3_cbc_encrypt(const unsigned char *input, unsigned char *output,
      ^~~~~~~~~~~~~~~~~~~~
usermode/hip_esp.c:2076:42: error: incompatible type for argument 5 of ‘DES_ede3_cbc_encrypt’
                            entry->ks[0], entry->ks[1], entry->ks[2],
                                          ^~~~~
In file included from usermode/hip_esp.c:63:0:
/usr/include/openssl/des.h:119:6: note: expected ‘DES_key_schedule * {aka struct DES_ks *}’ but argument is of type ‘DES_key_schedule {aka struct DES_ks}’
 void DES_ede3_cbc_encrypt(const unsigned char *input, unsigned char *output,
      ^~~~~~~~~~~~~~~~~~~~
usermode/hip_esp.c:2076:56: error: incompatible type for argument 6 of ‘DES_ede3_cbc_encrypt’
                            entry->ks[0], entry->ks[1], entry->ks[2],
                                                        ^~~~~
In file included from usermode/hip_esp.c:63:0:
/usr/include/openssl/des.h:119:6: note: expected ‘DES_key_schedule * {aka struct DES_ks *}’ but argument is of type ‘DES_key_schedule {aka struct DES_ks}’
 void DES_ede3_cbc_encrypt(const unsigned char *input, unsigned char *output,
      ^~~~~~~~~~~~~~~~~~~~
usermode/hip_esp.c: In function ‘hip_esp_decrypt’:
usermode/hip_esp.c:2473:28: error: incompatible type for argument 4 of ‘DES_ede3_cbc_encrypt’
                            entry->ks[0], entry->ks[1], entry->ks[2],
                            ^~~~~
In file included from usermode/hip_esp.c:63:0:
/usr/include/openssl/des.h:119:6: note: expected ‘DES_key_schedule * {aka struct DES_ks *}’ but argument is of type ‘DES_key_schedule {aka struct DES_ks}’
 void DES_ede3_cbc_encrypt(const unsigned char *input, unsigned char *output,
      ^~~~~~~~~~~~~~~~~~~~
usermode/hip_esp.c:2473:42: error: incompatible type for argument 5 of ‘DES_ede3_cbc_encrypt’
                            entry->ks[0], entry->ks[1], entry->ks[2],
                                          ^~~~~
In file included from usermode/hip_esp.c:63:0:
/usr/include/openssl/des.h:119:6: note: expected ‘DES_key_schedule * {aka struct DES_ks *}’ but argument is of type ‘DES_key_schedule {aka struct DES_ks}’
 void DES_ede3_cbc_encrypt(const unsigned char *input, unsigned char *output,
      ^~~~~~~~~~~~~~~~~~~~
usermode/hip_esp.c:2473:56: error: incompatible type for argument 6 of ‘DES_ede3_cbc_encrypt’
                            entry->ks[0], entry->ks[1], entry->ks[2],
                                                        ^~~~~
In file included from usermode/hip_esp.c:63:0:
/usr/include/openssl/des.h:119:6: note: expected ‘DES_key_schedule * {aka struct DES_ks *}’ but argument is of type ‘DES_key_schedule {aka struct DES_ks}’
 void DES_ede3_cbc_encrypt(const unsigned char *input, unsigned char *output,
      ^~~~~~~~~~~~~~~~~~~~
Makefile:1005: recipe for target 'hip-hip_esp.o' failed
make[3]: *** [hip-hip_esp.o] Error 1
make[3]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:1151: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:422: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Makefile:357: recipe for target 'all' failed
make: *** [all] Error 2